upload to maven

--- a/JLib/build.gradle
+++ b/JLib/build.gradle
@@ -30,3 +30,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:design:27.1.1'
 }
+
+apply from: "../bintrayPlugin.gradle"
