--- a/JLib/project.properties
+++ b/JLib/project.properties
@@ -5,3 +5,4 @@ project.packaging=aar
 project.siteUrl=https://github.com/jewelbao/JLib
 projecct.gitUrl=https://github.com/jewelbao/JLib.git
 project.maven=ComponentsMaven
+dev.name=jewelbao88
