--- a/JLib/project.properties
+++ b/JLib/project.properties
@@ -4,5 +4,10 @@ project.artifactId=JLib
 project.packaging=aar
 project.siteUrl=https://github.com/jewelbao/JLib
 projecct.gitUrl=https://github.com/jewelbao/JLib.git
+project.issues=https://github.com/jewelbao/JLib/issues
 project.maven=ComponentsMaven
 dev.name=jewelbao88
+dev.email=jewelbao88@gmail.com
+
+bintray.user=jewelbao88
+bintray.apikey=c8dc50c7dca2e696365e3c2176286638d8df9987
