--- a/bintray.gradle
+++ b/bintray.gradle
@@ -17,29 +17,29 @@
 //def projectSiteUrl = properties.getProperty("project.siteUrl")
 //def developerName = properties.getProperty("dev.name")
 //
-//group = projectGroupId
 //
-////生成源文件
-//task sourcesJar(type: Jar) {
-//    from android.sourceSets.main.java.srcDirs
-//    classifier = 'sources'
-//}
-//
-////生成Javadoc文档
-//task javadoc(type: Javadoc) {
-//    source = android.sourceSets.main.java.srcDirs
-//    classpath = files(android.bootClasspath)
-//    destinationDir = file("../javadoc/")
-//    options.encoding = "utf-8"
-//    options.charSet = "utf-8"
-//    failOnError false
-//}
-//
-////文档打包成jar
-//task javadocJar(type: Jar, dependsOn: javadoc) {
-//    classifier = 'javadoc'
-//    from javadoc.destinationDir
-//}
+////
+//////生成源文件
+////task sourcesJar(type: Jar) {
+////    from android.sourceSets.main.java.srcDirs
+////    classifier = 'sources'
+////}
+////
+//////生成Javadoc文档
+////task javadoc(type: Javadoc) {
+////    source = android.sourceSets.main.java.srcDirs
+////    classpath = files(android.bootClasspath)
+////    destinationDir = file("../javadoc/")
+////    options.encoding = "utf-8"
+////    options.charSet = "utf-8"
+////    failOnError false
+////}
+////
+//////文档打包成jar
+////task javadocJar(type: Jar, dependsOn: javadoc) {
+////    classifier = 'javadoc'
+////    from javadoc.destinationDir
+////}
 //
 ////上传到JCenter所需要的源码文件
 //artifacts {
@@ -47,20 +47,29 @@
 //    archives sourcesJar
 //}
 //
-////解决 JavaDoc 中文注释生成失败的问题
-//tasks.withType(Javadoc) {
-//    options.addStringOption('Xdoclint:none', '-quiet')
-//    options.addStringOption('encoding', 'UTF-8')
-//    options.addStringOption('charSet', 'UTF-8')
-//}
+//////解决 JavaDoc 中文注释生成失败的问题
+////tasks.withType(Javadoc) {
+////    options.addStringOption('Xdoclint:none', '-quiet')
+////    options.addStringOption('encoding', 'UTF-8')
+////    options.addStringOption('charSet', 'UTF-8')
+////}
 //
-////发布到 Bintray
+//
 //publish {
+//
 //    repoName = projectMavenName//远程仓库名字,不指明，默认是上传到maven
-//    userOrg = developerName//bintray.com的用户名
+//
+//    artifactId = projectArtifactId //项目名称
+//
+//    userOrg = developerName //bintray.com的用户名
+//
 //    groupId = projectGroupId //jcenter上的路径
-//    artifactId = projectArtifactId//项目名称
+//
 //    publishVersion = projectVersionName //版本号
+//
 //    desc = 'A tool for android'//描述，不重要
-//    website = projectSiteUrl//项目主页
+//
+//    website = projectSiteUrl //项目主页
+//    licences = ['Apache-2.0']
+//
 //}
