--- a/JLib/build.gradle
+++ b/JLib/build.gradle
@@ -7,17 +7,10 @@ android {
         minSdkVersion 14
         targetSdkVersion 28
         versionCode 13
-        versionName "1.0.12"
+        versionName "1.0.10"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
-    }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
     }
 
     lintOptions {
@@ -33,6 +26,9 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:design:28.0.0'
+    implementation 'com.android.support:support-annotations:28.0.0'
+    implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
 }
 
 apply from: "../bintrayPlugin2.gradle"
