新增了几个类，调整了几个方法

--- a/JLib/src/main/AndroidManifest.xml
+++ b/JLib/src/main/AndroidManifest.xml
@@ -1,2 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.jewel.lib" />
+    package="com.jewel.lib" >
+
+    <uses-permission android:name="android.permission.GET_PACKAGE_SIZE" />
+</manifest>
