--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.jewel.sample">
 
-
+    <uses-permission android:name="android.permission.TRANSMIT_IR" />
 
     <application
         android:allowBackup="true"
@@ -19,6 +19,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".FileUtilActivity" />
+        <activity android:name=".AppUtilActivity" />
     </application>
 
 </manifest>
